# rgb565-rle

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md
examples/: CMakeLists.txt  decode_example.c  encode_example.c
include/: rgb565_rle.h
src/: rgb565_rle.c
tests/: CMakeLists.txt  test_benchmark.c  test_compression_ratio.c  test_rgb565_rle.c
tools/: CMakeLists.txt  img2rle.c  rle2img.c  rle_utils.c  rle_utils.h  video2rle.c
